--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
   "@tailwindcss/vite": "^4.1.11",
   
     
+  "formik": "^2.4.6",
+  
+    
   "react": "^19.1.0",
   
     
@@ -51,7 +54,19 @@
   "react-router-dom": "^7.6.3",
   
     
-  "tailwindcss": "^4.1.11"
+  "react-toastify": "^11.0.5",
+  
+    
+  "tailwindcss": "^4.1.11",
+  
+    
+  "toast": "^0.5.4",
+  
+    
+  "toastify": "^2.0.1",
+  
+    
+  "yup": "^1.6.1"
   
   },
   
